--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "@vercel/analytics": "^0.1.4",
     "gatsby": "^4.17.1",
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-feed": "^4.17.0",
