--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,14 @@
 {
-  "redirects": [
-    { "source": "uscb.felpix.com", "destination": "http://128.111.30.212:25565", "permanent": true }
+  "rewrites": [
+    {
+      "source": "/:path*",
+      "has": [
+        {
+          "type": "host",
+          "value": "ucsb.felpix.com"
+        }
+      ],
+      "destination": "http://128.111.30.212:25565"
+    }
   ]
 }
